--- a/sample/MyApplication/WebUI/wwwroot/index.html
+++ b/sample/MyApplication/WebUI/wwwroot/index.html
@@ -17,7 +17,7 @@
         <a href="" class="reload">Reload</a>
         <a class="dismiss">🗙</a>
     </div>
-    <script src='framework://blazor.desktop.js'></script>
+    <script src="framework://blazor.desktop.js"></script>
 </body>
 
 </html>
