Support for Static Web Assets from Razor Class Libraries. (#178)
- Added RCL functionality for Windows, iOS, Android, and macOS.
- Each platform-specific WebView NuGet package has new MSBuild Props and Targets
- MobileBlazorBindingHost is used to provide services to BlazorWebView
- Update project templates
- Small fix for iOS/macOS: Don't crash for un-found static assets

Co-authored-by: Eilon Lipton <Eilon@users.noreply.github.com>

--- a/samples/HybridApp/HybridApp.Android/wwwroot/index.html
+++ b/samples/HybridApp/HybridApp.Android/wwwroot/index.html
@@ -5,8 +5,8 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
     <base href="/" />
-    <link href="css/bootstrap/bootstrap.min.css" rel="stylesheet" />
-    <link href="css/app.css" rel="stylesheet" />
+    <link href="_content/HybridApp/css/bootstrap/bootstrap.min.css" rel="stylesheet" />
+    <link href="_content/HybridApp/css/app.css" rel="stylesheet" />
 </head>
 
 <body>
