--- a/samples/HybridMessageApp/HybridMessageApp.Android/wwwroot/index.html
+++ b/samples/HybridMessageApp/HybridMessageApp.Android/wwwroot/index.html
@@ -5,8 +5,8 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
     <base href="/" />
-    <link href="css/bootstrap/bootstrap.min.css" rel="stylesheet" />
-    <link href="css/app.css" rel="stylesheet" />
+    <link href="_content/HybridMessageApp/css/bootstrap/bootstrap.min.css" rel="stylesheet" />
+    <link href="_content/HybridMessageApp/css/app.css" rel="stylesheet" />
 </head>
 
 <body>
