--- a/samples/HybridApp/wwwroot/index.html
+++ b/samples/HybridApp/wwwroot/index.html
@@ -11,7 +11,7 @@
 
 <body>
 
-    <app></app>
+    <div id="app">Loading...</div>
 
     <div id="blazor-error-ui">
         An unhandled error has occurred.
